Layout storyline.json

--- a/style.scss
+++ b/style.scss
@@ -163,6 +163,7 @@ section#chatbot {
       background-color: $user-bgcolor;
       color: $user-color;
       border: none;
+      padding-top: 5px;
     }
     figcaption {
       display: inline-flex;
