Fix button padding

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ section#chatbot {
       align-self: flex-start; }
     section#chatbot article#conversation .user {
       align-self: flex-end;
-      color: crimson; }
+      color: #f44336; }
       section#chatbot article#conversation .user figcaption {
         text-align: left; }
   section#chatbot .avatar {
@@ -114,13 +114,13 @@ section#chatbot {
     justify-content: flex-end; }
     section#chatbot .avatar#user img {
       display: block;
-      background-color: crimson;
+      background-color: #f44336;
       color: #fafafa;
       border: none;
       padding-top: 5px; }
     section#chatbot .avatar#user figcaption {
       display: inline-flex;
-      background-color: crimson;
+      background-color: #f44336;
       color: #fafafa; }
     section#chatbot .avatar#user figcaption.hide {
       display: none; }
@@ -132,7 +132,7 @@ section#chatbot {
     animation: 1s ease-in-out fade-in; }
     section#chatbot ul#input li {
       line-height: 30px;
-      padding-bottom: 15px;
+      padding-top: 15px;
       width: 100%;
       text-align: center; }
       section#chatbot ul#input li button,
@@ -142,7 +142,7 @@ section#chatbot {
         line-height: 30px; }
       section#chatbot ul#input li button {
         padding: 0 15px;
-        background-color: crimson;
+        background-color: #f44336;
         border-radius: 0.30rem;
         color: #fafafa; }
       section#chatbot ul#input li button:hover {
@@ -155,7 +155,7 @@ section#chatbot {
           font-family: "Merryweather", Georgia, sans-serif;
           border: none;
           outline: none;
-          border-bottom: 1px solid crimson; }
+          border-bottom: 1px solid #f44336; }
         section#chatbot ul#input li form label button {
           border-radius: 0 0.30rem 0.30rem 0; }
   section#chatbot ul#input.hide {
@@ -169,7 +169,7 @@ section#chatbot {
       line-height: 30px;
       padding: 0 15px;
       margin: 15px 0;
-      background-color: crimson;
+      background-color: #f44336;
       border-radius: 0.30rem;
       color: #fafafa; }
     section#chatbot nav button#play:hover {
