--- a/style.scss
+++ b/style.scss
@@ -193,7 +193,7 @@ section#chatbot {
     animation: 1s ease-in-out fade-in;
     li {
       line-height: $leading;
-      padding-bottom: .5*$leading;
+      padding-top: .5*$leading;
       width: 100%;
       text-align: center;
       button,
